# ygopro-client-rs

./: Cargo.toml  README.md  rustfmt.toml
src/: main.rs  utils.rs
src/service/: duel.rs  join_home.rs  mod.rs  waiting.rs
src/ygopro/: deck.rs  mod.rs  structs.rs  traits.rs  utils.rs
