[package]
name = "ygopro-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = {version = "1.20.0", features = ["rt", "net", "io-util", "time"]}
log = "0.4.17"
simple_logger = "2.1.0"
anyhow = "1.0.58"